07_Week_07/JavaSpringBoot-H2-MovieMgr/src/main/java/com/samples/moviemgr/error/InvalidGenreException.java
package com.samples.moviemgr.error;

public class InvalidGenreException extends RuntimeException{

	private String genre;
	
	public InvalidGenreException(String message, String genre) {
		
		super(message);
		
		this.genre = genre;
	}
	
	public String getGenre() {
		return genre;
	}
}
